@@ -1,80 +1,76 @@
 #!/bin/sh
 set -e
 
-cat << LICENSE_ACK
+# =========
+# FUNCTIONS
+# =========
 
-# ========================================================================================= #
-# Gluu License Agreement: https://github.com/GluuFederation/gluu-docker/blob/3.1.5/LICENSE. #
-# The use of Gluu Server Docker Edition is subject to the Gluu Support License.             #
-# ========================================================================================= #
-
-LICENSE_ACK
-
-import_ssl_cert() {
-    if [ -f /etc/certs/gluu_https.crt ]; then
-        openssl x509 -outform der -in /etc/certs/gluu_https.crt -out /etc/certs/gluu_https.der
-        keytool -importcert -trustcacerts \
-            -alias gluu_https \
-            -file /etc/certs/gluu_https.der \
-            -keystore /usr/lib/jvm/default-jvm/jre/lib/security/cacerts \
-            -storepass changeit \
-            -noprompt
-    fi
-}
-
-get_java_opts() {
-    local java_opts="
-        -server \
-        -XX:+UnlockExperimentalVMOptions \
-        -XX:+UseCGroupMemoryLimitForHeap \
-        -XX:MaxRAMFraction=$GLUU_MAX_RAM_FRACTION \
-        -XX:+DisableExplicitGC \
-        -Dgluu.base=/etc/gluu \
-        -Dserver.base=/opt/gluu/jetty/oxauth \
-        -Dlog.base=/opt/gluu/jetty/oxauth \
-        -Dpython.home=/opt/jython
-
-    "
-
+get_debug_opt() {
+    debug_opt=""
     if [ -n "${GLUU_DEBUG_PORT}" ]; then
-        java_opts="
-            ${java_opts}
+        debug_opt="
             -agentlib:jdwp=transport=dt_socket,address=${GLUU_DEBUG_PORT},server=y,suspend=n
         "
     fi
-
-    echo "${java_opts}"
+    echo "${debug_opt}"
 }
 
-if [ -f /etc/redhat-release ]; then
-    source scl_source enable python27 && python /opt/scripts/wait_for.py --deps="config,secret,ldap"
-else
-    python /opt/scripts/wait_for.py --deps="config,secret,ldap"
-fi
+run_wait() {
+    python /app/scripts/wait.py
+}
 
-if [ ! -f /deploy/touched ]; then
-    # backward-compat
-    if [ -f /touched ]; then
-        mv /touched /deploy/touched
-    else
-        if [ -f /etc/redhat-release ]; then
-            source scl_source enable python27 && python /opt/scripts/entrypoint.py
-        else
-            python /opt/scripts/entrypoint.py
-        fi
+run_entrypoint() {
+    # move twilio lib
+    if [ ! -f /opt/gluu/jetty/oxauth/custom/libs/twilio.jar ]; then
+        mkdir -p /opt/gluu/jetty/oxauth/custom/libs
+        mv /tmp/twilio.jar /opt/gluu/jetty/oxauth/custom/libs/twilio.jar
+    fi
 
-        import_ssl_cert
+    # move jsmpp lib
+    if [ ! -f /opt/gluu/jetty/oxauth/custom/libs/jsmpp.jar ]; then
+        mkdir -p /opt/gluu/jetty/oxauth/custom/libs
+        mv /tmp/jsmpp.jar /opt/gluu/jetty/oxauth/custom/libs/jsmpp.jar
+    fi
+
+
+    if [ ! -f /deploy/touched ]; then
+        python /app/scripts/entrypoint.py
         touch /deploy/touched
     fi
-fi
+}
+
+run_jks_sync() {
+    python /app/scripts/jks_sync.py &
+}
+
+# ==========
+# ENTRYPOINT
+# ==========
 
 if [ -f /etc/redhat-release ]; then
-    source scl_source enable python27 && python /opt/scripts/jks_sync.py &
+    source scl_source enable python27 && run_wait
+    source scl_source enable python27 && run_entrypoint
+    source scl_source enable python27 && run_jks_sync
 else
-    python /opt/scripts/jks_sync.py &
+    run_wait
+    run_entrypoint
+    run_jks_sync
 fi
 
+# run oxAuth server
 cd /opt/gluu/jetty/oxauth
 exec java \
-    $(get_java_opts) \
+    -server \
+    -Xms1024m \
+    -Xms1024m \
+    -XX:MaxMetaspaceSize=256m \
+    -XX:+DisableExplicitGC \
+    -XX:+UseContainerSupport \
+    -XX:MaxRAMPercentage=$GLUU_MAX_RAM_PERCENTAGE \
+    -Dgluu.base=/etc/gluu \
+    -Dserver.base=/opt/gluu/jetty/oxauth \
+    -Dlog.base=/opt/gluu/jetty/oxauth \
+    -Dpython.home=/opt/jython \
+    -Djava.io.tmpdir=/tmp \
+    $(get_debug_opt) \
     -jar /opt/jetty/start.jar
